--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -325,7 +325,7 @@ h1{
     padding: 0;
   }
   .welcome{
-    font-size: 12vw;
+    font-size: 14vw;
   }
   .role{
     font-size: 4vw;
@@ -340,7 +340,10 @@ h1{
   
   .page-content2 h1{
     text-align: end;
-    font-size: 6.5vw;
+    font-size: 10vw;
+  }
+  .page-content3 h1{
+    font-size: 10vw;
   }
   .curtain-main{
     height: 50%;
@@ -362,7 +365,7 @@ h1{
     grid-row:3 /span 1;
   }
   .curtain0 span,.page-content1 span{
-    font-size: 3.5vw;
+    font-size: 4vw;
   }
  .development{
     grid-template-rows: auto auto;
@@ -370,9 +373,9 @@ h1{
     grid-auto-rows: auto;
  }
   .gg span{
-    font-size: 3.4vw;
+    font-size: 4vw;
     padding: 1em;
-    letter-spacing: 0;
+    letter-spacing: -0.05em;
     line-height: 1em;
   }
   .page-content1{
@@ -383,7 +386,7 @@ h1{
   }
   .page-content1 h1{
     text-align: end;
-    font-size: 6.5vw;
+    font-size: 10vw;
     /* padding-bottom: 1em; */
   }
 
@@ -391,6 +394,10 @@ h1{
     color: #ffffff00;
     opacity: 1;
     -webkit-text-stroke-width: 1px;
+  }
+  .page-content1 span{
+    font-size: 4vw;
+    font-weight: 550;
   }
 footer{
     font-size: 3vw;
